# flutter_win_service

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart  service_start.dart  t2.txt  test.txt  winows_service_main.dart
example/windows/: .gitignore  CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: result_struct.dart  service.dart  service_bindings_generated.dart  service_status.dart  service_status_struct.dart  service_struct.dart
lib/src/: service.dart  service_bindings_generated.dart  service_exception.dart  service_status_struct.dart
src/: CMakeLists.txt  service.c  service.h  win_service.c
src/include/: result_struct.h  win_service.h
windows/: .gitignore  CMakeLists.txt
